feat : Inventory management data flow