@@ -1,9 +1,9 @@
 package org.cyklon.tryoutspringboot.Mapper;
 
 import org.cyklon.tryoutspringboot.DTO.GRNDTO;
-import org.cyklon.tryoutspringboot.DTO.InOrderDTO;
+import org.cyklon.tryoutspringboot.DTO.GRNItemsDTO;
 import org.cyklon.tryoutspringboot.Model.GRN;
-import org.cyklon.tryoutspringboot.Model.InOrder;
+import org.cyklon.tryoutspringboot.Model.GRNItems;
 import org.cyklon.tryoutspringboot.Repository.SupplierRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -17,18 +17,22 @@ public class GRNMapper {
     private SupplierRepository supplierRepository;
 
     @Autowired
-    private InOrderMapper inOrderMapper;
+    private GRNItemsMapper grnItemsMapper;
 
     public GRN toEntity (GRNDTO dto){
         GRN grn = new GRN();
         grn.setId(dto.getId());
         grn.setReceivedDate(dto.getReceivedDate());
         grn.setSupplier(supplierRepository.findById(dto.getSupplierId()).orElse(null));
-        if (dto.getInOrders() != null){
-            List<InOrder> inOrder = dto.getInOrders().stream()
-                    .map(inOrderMapper::toEntity)
-                    .toList();
-            grn.setInOrders(inOrder);
+        if(dto.getGrnItemsDTO()!=null){
+            List<GRNItems> grnItems = dto.getGrnItemsDTO().stream()
+                    .map(grnItemsDTO -> {
+                        GRNItems grnItem = grnItemsMapper.toEntity(grnItemsDTO);
+                        grnItem.setGrn(grn);
+                        return grnItem;
+                    })
+                    .collect(Collectors.toList());
+            grn.setGrnItems(grnItems);
         }
         return grn;
     }
@@ -38,11 +42,11 @@ public class GRNMapper {
         dto.setId(grn.getId());
         dto.setReceivedDate(grn.getReceivedDate());
         dto.setSupplierId(grn.getSupplier().getId());
-        if (grn.getInOrders() != null){
-            List<InOrderDTO> orderDTOS = grn.getInOrders().stream()
-                    .map(inOrderMapper:: toDTO)
+        if(grn.getGrnItems() != null){
+            List<GRNItemsDTO> grnItemsDTO = grn.getGrnItems().stream()
+                    .map(grnItemsMapper::toDTO)
                     .collect(Collectors.toList());
-            dto.setInOrders(orderDTOS);
+            dto.setGrnItemsDTO(grnItemsDTO);
         }
         return dto;
     }
